tests/suite/manifests/proxy-settings-policy/gateway-disabled-coffee-not-enabled-proxy-settings.yaml
# Gateway policy disables buffering,
# Route policy specifies buffer sizes without setting disable: false (should set PartiallyInvalid condition)
apiVersion: gateway.nginx.org/v1alpha1
kind: ProxySettingsPolicy
metadata:
  name: gateway-proxy-settings
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  buffering:
    disabled: true
---
apiVersion: gateway.nginx.org/v1alpha1
kind: ProxySettingsPolicy
metadata:
  name: coffee-proxy-settings
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  buffering:
    bufferSize: "16k"
    buffers:
      number: 16
      size: "64k"
    busyBuffersSize: "128k"
