tests/suite/manifests/proxy-settings-policy/gateway-enabled-coffee-disabled-http-proxy-settings.yaml
# Gateway policy has sufficient buffering,
# Route policy specifies not sufficient buffer sizes
# But Route policy disables buffering,

# Actual behaviour is not clear: Request is failed
apiVersion: gateway.nginx.org/v1alpha1
kind: ProxySettingsPolicy
metadata:
  name: gateway-proxy-settings
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  buffering:
    bufferSize: "16k"
    buffers:
      number: 16
      size: "64k"
    busyBuffersSize: "128k"
---
apiVersion: gateway.nginx.org/v1alpha1
kind: ProxySettingsPolicy
metadata:
  name: coffee-http-proxy-settings
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  buffering:
    disable: true
    bufferSize: "4k"
    buffers:
      number: 8
      size: "4k"
    busyBuffersSize: "16k"
