tests/suite/manifests/proxy-settings-policy/gateway-enabled-coffee-only-disabled-http-proxy-settings.yaml
# Gateway policy has sufficient buffering,
# Route policy specifies disable: true
# Since Route policy disables buffering, that means that Gateway settings should apply

# Actual behaviour is not clear: Request is succeeded
apiVersion: gateway.nginx.org/v1alpha1
kind: ProxySettingsPolicy
metadata:
  name: gateway-proxy-settings
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  buffering:
    bufferSize: "16k"
    buffers:
      number: 16
      size: "64k"
    busyBuffersSize: "128k"
---
apiVersion: gateway.nginx.org/v1alpha1
kind: ProxySettingsPolicy
metadata:
  name: coffee-http-proxy-settings
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  buffering:
    disable: true
