tests/suite/manifests/proxy-settings-policy/gateway-timeout-proxy-settings.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: ProxySettingsPolicy
metadata:
  name: gateway-timeout-proxy-settings
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  timeout:
    connect: "5s"
    read: "60s"
    send: "30s"
