tests/suite/manifests/proxy-settings-policy/h2c-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-h2c-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
    appProtocol: kubernetes.io/h2c
  selector:
    app: tea
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tea-h2c-route
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /tea-h2c
    backendRefs:
    - name: tea-h2c-svc
      port: 80
